Done v1 of website, removed hobbies for now.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,18 @@
-{% comment %} {% load static %} {% endcomment %}
+<!DOCTYPE html>
+<html>
+<!-- Footer -->
+<footer class="bg-dark text-center text-white">
+  <div class="text-center p-0" style="background-color: rgba(52, 58, 64, 0);">
+    <footer class="d-flex flex-wrap justify-content-center align-items-center py-3">  
+      <ul class="nav col-md-4 justify-content-center">
+        <a class="btn btn-outline-light" style="margin:10px;" href="mailto:gkroiz1@umbc.com" role="button">Email</a>
+        <a class="btn btn-outline-light" style="margin:10px;" href="https://www.linkedin.com/in/gkroiz/" role="button">Linkedin</a>
+        <a class="btn btn-outline-light" style="margin:10px;" href="https://github.com/gkroiz" role="button">Github</a>
+      </ul>
+    </footer>
+  <!-- Grid container -->
 
 
-<div class="footer-social-icons">
-    <h4 class="_14">Follow us on</h4>
-    <ul class="social-icons">
-        <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-github"></i></a></li>
-    </ul>
-</div>
+</footer>
+<!-- Footer -->
+</html>
