--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
 <!-- Footer -->
-<footer class="bg-dark text-center text-white">
+<footer class="bg-dark text-center text-white" style="margin:0px; bottom: 0; position: fixed; width: 100%; center: 0;">
   <div class="text-center p-0" style="background-color: rgba(52, 58, 64, 0);">
-    <footer class="d-flex flex-wrap justify-content-center align-items-center py-3">  
-      <ul class="nav col-md-4 justify-content-center">
+    <footer class="d-flex justify-content-center align-items-center py-1">  
         <a class="btn btn-outline-light" style="margin:10px;" href="mailto:gkroiz1@umbc.com" role="button">Email</a>
         <a class="btn btn-outline-light" style="margin:10px;" href="https://www.linkedin.com/in/gkroiz/" role="button">Linkedin</a>
         <a class="btn btn-outline-light" style="margin:10px;" href="https://github.com/gkroiz" role="button">Github</a>
-      </ul>
     </footer>
-  <!-- Grid container -->
-
-
+  </div>
 </footer>
 <!-- Footer -->
 </html>
