--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,28 +1,39 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1" href="#">Gerson Kroiz</span>
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1">
+</head>
+<html>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <span class="navbar-brand mb-1 h1" href="#">Gerson Cheon Kroiz</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url "research"%}">Research</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href={% url "projects"%}>Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href={% url "hobbies"%}>Hobbies</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href={% url "cv"%}>CV</a>
-        {% comment %} </li> {% endcomment %}
-        {% comment %} <li class="nav-item"> {% endcomment %}
-          {% comment %} <a class="nav-link disabled" href="#">Disabled</a> {% endcomment %}
-        {% comment %} </li> {% endcomment %}
-      </ul>
+        {% if page.active == "index" %}
+            <li class="active nav-item"><a class="nav-link" href="/">Home</a></li>
+        {% else %}
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        {% endif %}
+        {% if page.active == "research" %}
+            <li class="active nav-item"><a class="nav-link" href="/research.html">Research</a></li>
+        {% else %}
+            <li class="nav-item"><a class="nav-link" href="/research.html">Research</a></li>
+        {% endif %}
+        {% if page.active == "projects" %}
+            <li class="active nav-item"><a class="nav-link" href="/projects.html">Selected Projects</a></li>
+        {% else %}
+            <li class="nav-item"><a class="nav-link" href="/projects.html">Selected Projects</a></li>
+        {% endif %}
+        {% if page.active == "cv" %}
+            <li class="active nav-item"><a class="nav-link" href="/cv.html">CV</a></li>
+        {% else %}
+            <li class="nav-item"><a class="nav-link" href="/cv.html">CV</a></li>
+        {% endif %}
+    </ul>
     </div>
   </nav>
+
+  
+  </html>
